--- a/cine_planes/cine_planes.ipynb
+++ b/cine_planes/cine_planes.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-08-15T20:43:29.055956Z",
      "start_time": "2019-08-15T20:43:28.882077Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cv2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-370ac074f92e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwebbrowser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcv2\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Qt5Agg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pathlib\n",
     "import re\n",
@@ -30,15 +18,16 @@
     "\n",
     "import cv2 as cv\n",
     "import matplotlib\n",
-    "\n",
     "matplotlib.use('Qt5Agg')\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import plotly\n",
     "import pydicom as dicom\n",
     "from scipy.interpolate import RegularGridInterpolator\n",
+    "from skimage.transform import resize\n",
     "import sympy\n",
-    "from sympy import Point, Line, Segment, Plane, Point3D\n",
+    "from sympy import Point, Line, Segment, Plane, Point3D, Line3D, Segment3D\n",
+    "from sympy.matrices import Matrix\n",
     "\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "\n",
@@ -57,23 +46,24 @@
     "    orientation = tuple((float(o) for o in dcm.ImageOrientationPatient))\n",
     "    row_vec, col_vec = orientation[:3], orientation[3:]\n",
     "    trans_mat = np.array([[row_vec[0] * c_res, col_vec[0] * r_res, 0, position[0]],\n",
-    "                          [row_vec[1] * c_res, col_vec[1] * r_res, 0, position[1]],\n",
-    "                          [row_vec[2] * c_res, col_vec[2] * r_res, 0, position[2]],\n",
-    "                          [0, 0, 0, 1]])\n",
+    "                                [row_vec[1] * c_res, col_vec[1] * r_res, 0, position[1]],\n",
+    "                                [row_vec[2] * c_res, col_vec[2] * r_res, 0, position[2]],\n",
+    "                                [0, 0, 0, 1]])\n",
     "    return trans_mat\n",
     "\n",
     "\n",
-    "def get_trans_mat2D(dcm: dicom.dataset.FileDataset) -> np.ndarray:\n",
+    "def get_trans_mat2D(dcm: dicom.dataset.FileDataset) -> np.ndarray:    \n",
+    "    position = get_pos(dcm)\n",
     "    pixel_spacing = dcm.PixelSpacing\n",
     "    c_res = pixel_spacing[1]\n",
     "    r_res = pixel_spacing[0]\n",
     "    orientation = tuple((float(o) for o in dcm.ImageOrientationPatient))\n",
     "    row_vec, col_vec = orientation[:3], orientation[3:]\n",
     "    trans_mat2D = np.array([[row_vec[0] * c_res, col_vec[0] * r_res],\n",
-    "                            [row_vec[1] * c_res, col_vec[1] * r_res]])\n",
+    "                          [row_vec[1] * c_res, col_vec[1] * r_res]])\n",
     "    return trans_mat2D\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
     "def get_trans_constant(dcm: dicom.dataset.FileDataset) -> np.ndarray:\n",
     "    position = get_pos(dcm)\n",
     "    pixel_spacing = dcm.PixelSpacing\n",
@@ -81,10 +71,10 @@
     "    r_res = pixel_spacing[0]\n",
     "    orientation = tuple((float(o) for o in dcm.ImageOrientationPatient))\n",
     "    row_vec, col_vec = orientation[:3], orientation[3:]\n",
-    "    trans_mat = np.array([position[0], position[1]])\n",
+    "    trans_mat = np.array([position[0],position[1]])\n",
     "    return trans_mat\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
     "def thru_plane_position(dcm: dicom.dataset.FileDataset) -> np.ndarray:\n",
     "    \"\"\"Gets spatial coordinate of image origin whose axis\n",
     "    is perpendicular to image plane.\n",
@@ -137,7 +127,7 @@
     "        resized_img = np.expand_dims(cv.resize(cine_img_stack[i], (n_extended_height, n_col),\n",
     "                                               interpolation=cv.INTER_LINEAR), axis=0)\n",
     "        interpolated_img_stack.append(resized_img)\n",
-    "\n",
+    "        \n",
     "    interpolated_img_stack = np.concatenate(interpolated_img_stack, axis=0)\n",
     "\n",
     "    return interpolated_img_stack\n",
@@ -234,8 +224,9 @@
     "    return la_file_names_list, sa_file_names_list\n",
     "\n",
     "\n",
-    "def get_est_la_plane_from_img_stack(points: list, interpolated_img_stack: np.ndarray) -> tuple:\n",
-    "    assert (points[0] != points[1])\n",
+    "def get_est_la_plane_from_img_stack(points : list, interpolated_img_stack: np.ndarray) -> tuple:\n",
+    "\n",
+    "    assert(points[0] != points[1])\n",
     "\n",
     "    def get_t_val_from_x(x: np.ndarray) -> np.ndarray:\n",
     "        return (x - points[0][0]) / (points[1][0] - points[0][0])\n",
@@ -290,81 +281,83 @@
     "    return la_plane\n",
     "\n",
     "\n",
-    "# The intersection of two planes is a line\n",
+    "# The intersection of two planes is a line \n",
     "def smart_crop2D(img: np.ndarray, threshold=0.0) -> np.ndarray:\n",
     "    non_empty_columns = np.where(img.max(axis=0) > threshold)[0]\n",
     "    non_empty_rows = np.where(img.max(axis=1) > threshold)[0]\n",
-    "    crop_box = (np.min(non_empty_rows), np.max(non_empty_rows),\n",
+    "    cropBox = (np.min(non_empty_rows), np.max(non_empty_rows), \n",
     "               np.min(non_empty_columns), np.max(non_empty_columns))\n",
-    "    new_img = np.copy(img[crop_box[0]:crop_box[1] + 1, crop_box[2]:crop_box[3] + 1, ...])\n",
+    "    new_img = np.copy(img[cropBox[0]:cropBox[1]+1, cropBox[2]:cropBox[3]+1, ...])\n",
     "    return new_img\n",
     "\n",
     "\n",
-    "def get_intersection_line3D(lhs_plane: plotly.graph_objs.Surface,\n",
-    "                            rhs_plane: plotly.graph_objs.Surface) -> sympy.Line3D:\n",
-    "    lhs_points = Point3D(lhs_plane.x[0, 0], lhs_plane.y[0, 0], lhs_plane.z[0, 0]), Point3D(lhs_plane.x[-1, -1],\n",
-    "                                                                                           lhs_plane.y[-1, -1],\n",
-    "                                                                                           lhs_plane.z[\n",
-    "                                                                                               -1, -1]), Point3D(\n",
-    "        lhs_plane.x[0, -1], lhs_plane.y[0, -1], lhs_plane.z[0, -1])\n",
-    "    rhs_points = Point3D(rhs_plane.x[0, 0], rhs_plane.y[0, 0], rhs_plane.z[0, 0]), Point3D(rhs_plane.x[-1, -1],\n",
-    "                                                                                           rhs_plane.y[-1, -1],\n",
-    "                                                                                           rhs_plane.z[\n",
-    "                                                                                               -1, -1]), Point3D(\n",
-    "        rhs_plane.x[0, -1], rhs_plane.y[0, -1], rhs_plane.z[0, -1])\n",
-    "\n",
+    "def get_intersection_line3D(lhs_plane : plotly.graph_objs.Surface, \n",
+    "                       rhs_plane : plotly.graph_objs.Surface) -> sympy.Line3D:\n",
+    "    lhs_points = Point3D(lhs_plane.x[0, 0], lhs_plane.y[0, 0], lhs_plane.z[0, 0]),  \\\n",
+    "                 Point3D(lhs_plane.x[-1, -1], lhs_plane.y[-1, -1], lhs_plane.z[-1, -1]), \\\n",
+    "                 Point3D(lhs_plane.x[0, -1], lhs_plane.y[0, -1], lhs_plane.z[0, -1])\n",
+    "    rhs_points = Point3D(rhs_plane.x[0, 0], rhs_plane.y[0, 0], rhs_plane.z[0, 0]),  \\\n",
+    "                 Point3D(rhs_plane.x[-1, -1], rhs_plane.y[-1, -1], rhs_plane.z[-1, -1]),  \\\n",
+    "                 Point3D(rhs_plane.x[0, -1], rhs_plane.y[0, -1], rhs_plane.z[0, -1])\n",
+    "        \n",
     "    lhs_plane = Plane(*lhs_points)\n",
     "    rhs_plane = Plane(*rhs_points)\n",
-    "\n",
+    "    \n",
     "    return lhs_plane.intersection(rhs_plane)\n",
     "\n",
     "\n",
     "def get_dicom_file(file_name: pathlib.Path) -> dicom.dataset.FileDataset:\n",
     "    dicom_file = dicom.read_file(str(file_name))\n",
     "    return dicom_file\n",
-    "\n",
-    "\n",
-    "# The intersection of two planes is a line\n",
-    "def get_intersection_points2D(intersection_points: list,\n",
-    "                              trans_mat2D: np.ndarray,\n",
-    "                              trans_constant: np.ndarray) -> tuple:\n",
+    "   \n",
+    "    \n",
+    "# The intersection of two planes is a line \n",
+    "def get_intersection_points2D(intersection_points : list, \n",
+    "                     trans_mat2D : np.ndarray,\n",
+    "                     trans_constant : np.ndarray) -> tuple:\n",
     "    lhs_point, rhs_point = intersection_points\n",
     "    new_lhs_point = Point(lhs_point.x, lhs_point.y)\n",
     "    new_rhs_point = Point(rhs_point.x, rhs_point.y)\n",
     "    new_lhs_point = new_lhs_point.translate(-trans_constant[0], -trans_constant[1])\n",
     "    new_rhs_point = new_rhs_point.translate(-trans_constant[0], -trans_constant[1])\n",
     "    x1 = np.linalg.solve(trans_mat2D,\n",
-    "                         np.array([float(new_lhs_point.x), float(new_lhs_point.y)]))\n",
+    "                       np.array([float(new_lhs_point.x), float(new_lhs_point.y)]))\n",
     "    x2 = np.linalg.solve(trans_mat2D,\n",
-    "                         np.array([float(new_rhs_point.x), float(new_rhs_point.y)]))\n",
+    "                       np.array([float(new_rhs_point.x), float(new_rhs_point.y)])) \n",
     "    x = np.array([x1[0], x2[0]])\n",
     "    y = np.array([x1[1], x2[1]])\n",
     "    return x, y\n",
     "\n",
     "\n",
-    "def get_intersection_points2D_with_img(intersection_points: list,\n",
-    "                                       plane_range: np.ndarray) -> tuple:\n",
+    "def get_intersection_points2D_with_img(intersection_points : list, \n",
+    "                              plane_range : np.ndarray) -> tuple:\n",
     "    x, y = intersection_points\n",
     "    p1 = Point(x[0], y[0])\n",
     "    p2 = Point(x[1], y[1])\n",
     "    intersection_line = Line(p1, p2)\n",
-    "    points1 = Point(plane_range[0, 0], plane_range[0, 1]), Point(plane_range[0, 0], plane_range[1, 1])\n",
-    "    points2 = Point(plane_range[0, 0], plane_range[1, 1]), Point(plane_range[1, 0], plane_range[1, 1])\n",
-    "    points3 = Point(plane_range[1, 0], plane_range[1, 1]), Point(plane_range[1, 0], plane_range[0, 1])\n",
-    "    points4 = Point(plane_range[1, 0], plane_range[0, 1]), Point(plane_range[0, 0], plane_range[0, 1])\n",
-    "\n",
+    "    points1 = Point(plane_range[0, 0], plane_range[0, 1]),  \\\n",
+    "              Point(plane_range[0, 0], plane_range[1, 1])\n",
+    "    points2 = Point(plane_range[0, 0], plane_range[1, 1]),  \\\n",
+    "              Point(plane_range[1, 0], plane_range[1, 1])\n",
+    "    points3 = Point(plane_range[1, 0], plane_range[1, 1]),  \\\n",
+    "              Point(plane_range[1, 0], plane_range[0, 1])\n",
+    "    points4 = Point(plane_range[1, 0], plane_range[0, 1]),  \\\n",
+    "              Point(plane_range[0, 0], plane_range[0, 1])\n",
+    "    \n",
     "    line1 = Segment(*points1)\n",
     "    line2 = Segment(*points2)\n",
     "    line3 = Segment(*points3)\n",
     "    line4 = Segment(*points4)\n",
-    "\n",
-    "    result = tuple(filter(lambda x: x != [], intersection_line.intersection(line1) + intersection_line.intersection(\n",
-    "        line2) + intersection_line.intersection(line3) + intersection_line.intersection(line4)))\n",
-    "\n",
+    "    \n",
+    "    result = tuple(filter(lambda x: x!=[], intersection_line.intersection(line1) +  \\\n",
+    "           intersection_line.intersection(line2) +  \\\n",
+    "           intersection_line.intersection(line3) +  \\\n",
+    "           intersection_line.intersection(line4)))\n",
+    "    \n",
     "    return (float(result[0].x), float(result[0].y)), (float(result[1].x), float(result[1].y))\n",
     "\n",
     "\n",
-    "def get_plane_xy_range(plane: np.ndarray) -> np.ndarray:\n",
+    "def get_plane_xy_range(plane : np.ndarray) -> np.ndarray:\n",
     "    x_max, y_max = plane.shape\n",
     "    x_min, y_min = 0.0, 0.0\n",
     "    return np.array([[x_min, y_min], [x_max, y_max]], dtype=np.float32)\n",
@@ -375,7 +368,7 @@
     "    la_file_names_list, sa_file_names_list = get_file_names_lists(N_PATIENT, N_PHASE)\n",
     "    la_file_names_list = sorted(la_file_names_list, key=sort_by_plane_number)\n",
     "    sa_file_names_list = sorted(sa_file_names_list, key=sort_by_plane_number)\n",
-    "\n",
+    "    \n",
     "    N_LA_PLANES = len(la_file_names_list)\n",
     "    N_SA_PLANES = len(sa_file_names_list)\n",
     "\n",
@@ -383,7 +376,7 @@
     "        interpolated_img_stack = get_interpolated_img_stack(sa_file_names_list)\n",
     "        sa_planes = get_planes_list(sa_file_names_list)\n",
     "        la_plane = get_planes_list([la_file_name], 1)\n",
-    "\n",
+    "        \n",
     "        intersection_line3D = get_intersection_line3D(sa_planes[N_SA_PLANES // 2], la_plane[0])\n",
     "        intersection_points3D = intersection_line3D[0].points\n",
     "\n",
@@ -394,40 +387,40 @@
     "        plane_range = get_plane_xy_range(sa_planes[N_SA_PLANES // 2].surfacecolor)\n",
     "        intersection_points2D_with_img = get_intersection_points2D_with_img(intersection_points2D, plane_range)\n",
     "        p1, p2 = intersection_points2D_with_img\n",
-    "\n",
+    "        \n",
     "        html_file_path = pathlib.Path(f\"{str(la_file_name.name).split('.')[0]}.html\")\n",
     "\n",
     "        if not html_file_path.exists():\n",
     "            plot_planes_with_buttons(sa_planes, la_plane, width=1000, height=1000,\n",
-    "                                     title=\"Plotting SA planes with a LA plane\",\n",
+    "                                     title=\"Plotting SA planes with a LA plane\", \n",
     "                                     filename=str(html_file_path))\n",
     "            print(f\"{str(html_file_path)} created\")\n",
     "        webbrowser.open_new(str(html_file_path))\n",
     "\n",
-    "        estimated_la_plane = get_est_la_plane_from_img_stack(intersection_points2D_with_img,\n",
+    "        estimated_la_plane = get_est_la_plane_from_img_stack(intersection_points2D_with_img, \n",
     "                                                             interpolated_img_stack)\n",
     "        original_la = la_plane[0].surfacecolor\n",
     "        estimated_la = smart_crop2D(estimated_la_plane.surfacecolor, 10.0)\n",
-    "\n",
+    "    \n",
     "        fig, ax = plt.subplots(1, 3, tight_layout=True)\n",
     "        ax[0].imshow(original_la, cmap='gray')\n",
     "        ax[1].imshow(sa_planes[N_SA_PLANES // 2].surfacecolor, cmap='gray')\n",
     "        ax[1].plot(p1[0], p1[1], 'ro')\n",
-    "        ax[1].plot(p2[0], p2[1], 'ro')\n",
-    "        xlim, ylim = plane_range[:, 0], plane_range[:, 1]\n",
+    "        ax[1].plot(p2[0], p2[1], 'ro') \n",
+    "        xlim, ylim = plane_range[:,0], plane_range[:,1]\n",
     "        ylim = ylim[::-1]\n",
     "        ax[1].set(xlim=xlim, ylim=ylim)\n",
-    "        ax[2].imshow(estimated_la[::-1, ::-1].T, cmap='gray')\n",
+    "        ax[2].imshow(estimated_la[::-1,::-1].T, cmap='gray')\n",
     "\n",
     "        ax[0].title.set_text(f\"{N_PATIENT}_original_la{str(i)}_ph{str(N_PHASE)}\")\n",
     "        ax[1].title.set_text(f\"{N_PATIENT}_original_sa{str(N_SA_PLANES // 2)}_ph{str(N_PHASE)}\")\n",
     "        ax[2].title.set_text(f\"estimated_la{str(i)}_ph{str(N_PHASE)}\")\n",
-    "\n",
+    "        \n",
     "        figManager = plt.get_current_fig_manager()\n",
-    "        figManager.window.showMaximized()\n",
+    "        figManager.window.showMaximized()     \n",
     "        plt.show()\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
